# disease-server

./: Cargo.toml  README.md  docker-compose.yaml  schema.sql
docker/: Dockerfile  Dockerfile-postgres
src/: consts.rs  database.rs  main.rs  structs.rs
